# rondo

./: .gitignore  .gitleaksignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HOW-TO-BUILD.md  LICENSE  README.md  SECURITY.md  SESSION-HISTORY.md  START-HERE.md  TRY.md  __init__.py  dispatch.py  llms.txt  overnight.py  parallel.py  pyproject.toml  rondo.toml  runner.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  question_or_idea.yml
.github/workflows/: build.yml
docs/: A-PLUS-PLAN.md  A-PLUS-PROGRESS.md  ADR-001-test-strategy.md  API-STABILITY.md  COOKBOOK.md  CROSS-VENDOR-JURY.md  DISPATCH-ROUTING-DIAGRAM.md  ERROR-ENVELOPE-CONTRACT.md  EXAMPLE-VERIFICATION.md  EXCELLENCE-PLAN.md  GETTING-STARTED-WOW.md  GETTING-STARTED.md  GOLDEN-FIVE.md  GOLDEN-PATH.md  LEARNINGS-FROM-RONDO-BUILD.md  PROMPT-CODING.md  REFACTOR-PLAN.md  RESUME-DEEP-TESTING.md  ROADMAP-v0.6.md  ROADMAP-v0.7-providers.md  RONDO-REFERENCE.md  SCORING.md  SPEC-INLINE-DISPATCH.md  TEST-INVENTORY.md  WHY-RONDO.md
examples/: 01-simple-review.yaml  02-multi-provider.yaml  04-with-hooks.py  INDEX.md  SHOWCASE.py  TEST-ALL.md  config.toml  demo_pipeline.py  generate_index.py  phases_overnight.py  provider-templates.toml  review_demo.py  round_caliber_fix.py  round_code_review.py  round_doc_sweep.py  round_file_check.py  round_hello.py  round_multi_task.py  round_refactor_audit.py  round_security_audit.py  round_test_generator.py  routing-multi-review.defaults.toml  verify-examples.sh
examples/api/: 01_simple_dispatch.py  02_smart_return.py  03_execution_mode_triptych.py  README.md  adversarial_redteam.py  background_polling_workflow.py  batch_retry_runner.py  benchmark_harness.py  budget_aware_routing.py  budget_guarded_parallel.py  build_failure_triage.py  claude_step_driver.py  code_refine_pipeline.py  code_review_to_findings.py  community_reply_variant_lookup.py  conductor_if_else.py  confidence_escalation.py  config_template_override.py  controlled_review_loop.py  cross_ai_verify.py  dispatch_with_hooks.py  envelope_validation.py  error_recovery_patterns.py  essay_fact_check_pipeline.py  example_dispatch.py  field_named_return.py  find_and_fix_pipeline.py  idempotency_cache_demo.py  incident_triage_playbook.py  lie_trap_loop.py  lint_fix_verify_loop.py  live_recovery_loop.py  model_comparison.py  multi_ai_tiebreaker.py  multi_platform_publish.py  multi_provider_dispatch.py  normalize_responses.py  option_c_01_review_current_context.py  option_c_02_ask_gemini.py  option_c_03_provider_vote.py  (+15 more)
examples/cli/: 01-execution-modes.sh  02-background-polling.sh  03-consensus-review.sh  04-model-comparison.sh  04-showcase-runner.sh  05-batch-retry.sh  07-fleet-health.sh  (+7 more)
reference/: README.md
reports/: CURSOR-REVIEW-BRIEF.md  LIVE-TESTING-2026-06-12.md  NIGHT-SHIFT-2026-06-05.md  QUALITY-CHECKLIST-2026-06-10.md  ROAD-TO-8.md  SELF-AUDIT-2026-06-13.md  SPEC-STATUS-TRUTH-2026-06-14.md  TRUTH-AUDIT-2026-06-14.md  codebase-review-2026-06-08.md  cold-witness-public-release-2026-06-06.md  cursor-productization-roadmap-2026-06-06.md  cursor-review-2026-06-05.md  external-validation-loop-engineering-2026-06-11.md  finding-traceability-2026-04-08.md  hostile-review-2026-06-06.md  hostile-review-2026-06-07.md  hostile-review-2026-06-15.md  hostile-review-pipeline-2026-06-11.txt  inline-control-review-2026-06-11.md  phase-d-review-2026-04-08.json  phase-d-review-full-2026-04-08.json  phase-d-review-gemini-gemini-2.5-pro-2026-04-08.md  phase-d-review-grok-grok-3-2026-04-08.md  phase-d-review-summary-2026-04-08.md  reliability-triage-2026-06-06.md  rondo-morning-20260329.md  rondo-morning-20260330.md  rondo-morning-20260331.md  rondo-morning-20260401.md  rondo-morning-20260402.md  rondo-morning-20260405.md  rondo-morning-20260411.md  rondo-morning-20260603.md  rondo-morning-20260605.md  rondo-morning-20260606.md  rondo-morning-20260607.md  rondo-morning-20260608.md  rondo-morning-20260609.md  rondo-morning-20260610.md  rondo-morning-20260611.md  (+5 more)
rounds/: __init__.py  build_check.py  convention_check.py  db_bootstrap_validation.py  digest_refresh.py  knowledge_mine.py  pr_review.py  spec_health.py  sprint_close.py  test_gaps.py
scripts/: ace-sign.py  audit_traceability.py  build_corpus_fixtures.py  rondo-deep-build.sh  setup-rondo.sh  traceability.py
specs/: F01-error-resilience.md  F02-configuration.md  F03-concurrency-safety.md  IFS-001-claude-cli.md  IFS-002-caliber-integration.md  IFS-003-ob-integration.md  IFS-004-token-signing.md  IFS-100-claude-cli.md  IFS-101-caliber-integration.md  IFS-102-ob-integration.md  IFS-103-token-signing.md  IFS-104-mcp-server.md  R01-core.md  R02-automation.md  REQ-001-core.md  REQ-002-automation.md  REQ-100-core.md  REQ-101-addendum-multi-account.md  REQ-101-automation.md  REQ-103-dispatch-preflight.md  REQ-104-dispatch-history.md  REQ-105-dispatch-notifications.md  REQ-106-trend-alerting.md  REQ-107-task-flakiness.md  REQ-108-template-promotion.md  REQ-109-provider-adapters.md  REQ-110-multi-account.md  RONDO-01-core.md  RONDO-02-round-catalog.md  Rondo-DESIGN-registry-auto-apply.md  Rondo-FIX-342-round-file-cloud-routing.md  Rondo-FIX-347-rate-limit-resilience.md  Rondo-IFS-100-claude-cli.md  Rondo-IFS-100-mcp-server.md  Rondo-IFS-101-caliber-integration.md  Rondo-IFS-102-ob-integration.md  Rondo-IFS-103-token-signing.md  Rondo-IFS-104-mcp-server.md  Rondo-REQ-100-addendum-dispatch-hooks.md  Rondo-REQ-100-addendum-usability.md  (+99 more)
spikes/: SPIKE-TRACKER.md  dispatch.py  engine.py  parallel.py  report.py  runner.py
tests/: README.md  conftest.py  test_ai_help.py  test_audit.py  test_auth.py  test_chaos.py  test_cli.py  test_cloud_full.py  test_config.py  test_conventions.py  test_dispatch.py  test_engine.py  test_examples.py  test_flaky.py  test_health.py  test_history.py  test_integration_e2e.py  test_live.py  test_mcp.py  test_metrics.py  test_notify.py  test_overnight.py  test_parallel.py  test_preflight.py  test_property.py  test_providers.py  test_real_dispatch.py  test_report.py  test_runner.py  test_sanitize.py  test_spikes.py  test_spool.py
(+369 files in other folders)
