[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rondo"
version = "0.6.0"
description = "AI dispatch layer — route tasks to any AI provider, get structured results back."
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Mark Hubers" },
]
dependencies = [
    "mcp>=1.0",
]

[project.scripts]
rondo = "rondo.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.bandit]
# -- B404: subprocess import is required — Rondo's core function is invoking Claude via subprocess
# -- B603: Popen without shell=True is the SAFE pattern (we never use shell=True)
skips = ["B404", "B603"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "cloud: Real cloud API dispatch tests (~$0.02). Run: pytest -m cloud",
    "cloud_full: Config-driven validation of ALL providers + tiers (~$0.10-0.50). Run: pytest -m cloud_full",
]
addopts = "-m 'not cloud and not cloud_full'"

[tool.coverage.run]
source = ["rondo"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_empty = true
