[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rondo"
version = "0.7.0"
description = "AI dispatch layer — route tasks to any AI provider, get structured results back."
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Mark Hubers" },
]
dependencies = [
    "mcp>=1.0",
    "PyYAML>=6.0",
]

## -- RONDO-341: the suite + 6-gate toolchain, declared so a stranger (or a
## -- Linux container) can recreate the env with: pip install -e '.[dev]'
## -- ruff is ==pinned — the format baseline (RONDO-338); locked by
## -- tests/conventions/test_packaging.py
[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-xdist>=3.8",
    "hypothesis>=6.155",
    "ruff==0.15.5",
    "mypy>=1.19",
    "pylint>=4.0",
    "bandit>=1.8",
]

[project.scripts]
rondo = "rondo.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# -- RONDO-301 (Finding #294): non-.py files were silently dropped from the
# -- wheel — installed `rondo --ai-help` crashed on missing ai_help_data.json.
# -- Same defect class as Finding #289 (init template not packaged).
rondo = ["data/*.json", "data/*.toml"]

# -- RONDO-338: gate tool configs lived in ace2's ROOT pyproject and did NOT
# -- travel with the split — ruff fell back to line-length 88 (124 false
# -- "would reformat" files) and mypy/bandit had no profile. Ported here.
[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "D"]
# -- Same ignore set the code was written under (ace2 heritage):
# -- E501 line length (formatter owns it), D101/D102/D103/D105/D107 docstring
# -- granularity, D203/D213 conflicting pydocstyle pairs.
ignore = ["E501", "D203", "D213", "D101", "D102", "D103", "D105", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["rondo"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
mypy_path = ["src"]
ignore_missing_imports = true

[tool.bandit]
# -- B404: subprocess import is required — Rondo's core function is invoking Claude via subprocess
# -- B603: Popen without shell=True is the SAFE pattern (we never use shell=True)
# -- B607: `security` (macOS keychain) and `op` (1Password) are system CLIs
# --       resolved from PATH by design; argv is a hardcoded list, never shell,
# --       always with timeout (RONDO-338 — first honest bandit scan post-split)
skips = ["B404", "B603", "B607"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "cloud: Real cloud API dispatch tests (~$0.02). Run: pytest -m cloud",
    "cloud_full: Config-driven validation of ALL providers + tiers (~$0.10-0.50). Run: pytest -m cloud_full",
    "ollama: Real Ollama local dispatch tests ($0, needs Ollama running). Run: pytest -m ollama",
    "perf: Performance regression tests — time-sensitive, may be flaky on loaded systems. Run: pytest -m perf",
    "real_claude_check: opt OUT of the RONDO-341 hermetic claude-binary fake — for tests OF the binary check itself",
]
addopts = "-m 'not cloud and not cloud_full and not ollama and not perf'"

[tool.coverage.run]
source = ["rondo"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_empty = true

[tool.pylint.messages_control]
disable = ["cyclic-import"]
